unpackaged/main/default/objects/Opportunity_Auto_Close_Settings__mdt/Opportunity_Auto_Close_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Stores configurable settings for opportunity auto closure criteria</description>
    <label>Opportunity Auto Close Settings</label>
    <pluralLabel>Opportunity Auto Close Settings</pluralLabel>
</CustomObject>