unpackaged/main/default/objects/Opportunity_Auto_Close_Settings__mdt/fields/Last_Completed_Onboarding_Step__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Onboarding_Step__c</fullName>
    <description>Last completed onboarding step days to be considered for auto closure</description>
    <inlineHelpText>Last completed onboarding step days to be considered for auto closure</inlineHelpText>
    <label>Last Completed Onboarding Step</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>