unpackaged/main/default/objects/Opportunity_Auto_Close_Settings__mdt/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <description>User roles to be considered for auto closure</description>
    <inlineHelpText>User roles to be considered for auto closure</inlineHelpText>
    <label>Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>