unpackaged/main/default/objects/Opportunity_Auto_Close_Settings__mdt/fields/Roles_Like__c.field-meta.xml
<CustomField>
    <fullName>Roles_Like__c</fullName>
    <description>User roles that contains given text to be considered for auto closure</description>
    <inlineHelpText>User roles that contains given text to be considered for auto closure</inlineHelpText>
    <label>Roles Like</label>
    <length>255</length>
    <type>Text</type>
</CustomField>